--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "tsx": "^4.19.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -107,7 +108,6 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.12.3"
